--- a/WebOptixSuccess/Shared/MainLayout.razor
+++ b/WebOptixSuccess/Shared/MainLayout.razor
@@ -9,7 +9,14 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <div class="row" style="width:100%;">
+            <div class="col col-10">
+                <b>Optix Management System @*(@startDate)*@</b>
+            </div>
+            <div class="col">
+                <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            </div> 
+            </div>
         </div>
 
         <article class="content px-4">
