--- a/WebOptixSuccess/Components/ItemOrdersComponent.razor
+++ b/WebOptixSuccess/Components/ItemOrdersComponent.razor
@@ -3,86 +3,90 @@
 @inject NavigationManager NavigationManager
 @inject Plugins.DataStore.SQL.AppDbContext dbContext
 
-@if (ItemOrderCollection == null)
-{
-    <p><em>Loading...</em></p>
+<RadzenPanel AllowCollapse="true" Style="margin: 10px" Off>
+    <HeaderTemplate>
+        <h4 class="m-0 d-flex align-items-center">
+            <RadzenIcon Icon="format_list_bulleted" Class="mr-1" /><b>Детали заказа</b>
+        </h4>
+    </HeaderTemplate>
+    <ChildContent>
+@if (ItemOrderCollection == null){
+        <p><em>Loading...</em></p>
 } else {
-            <RadzenTabs>
-                <Tabs>
-                    <RadzenTabsItem Text="Детали заказа">
-                        <RadzenDataGrid @ref="grid" AllowFiltering="true" AllowSorting="true" Data="@(ItemOrderCollection)" TItem="ItemOrder"
-                            AllowPaging="true" PageSize="3" PagerHorizontalAlign="HorizontalAlign.Center" PageSizeOptions="@pageSizeOptions"
-                            AllowColumnResize="true" >
-                            <EmptyTemplate>
-                                <p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">В данном заказе еще нет товаров. Добавьте товары в заказ.</p>
-                            </EmptyTemplate>
-                            <Columns>
-                                <RadzenDataGridColumn TItem="ItemOrder" Property="ItemOrderId" Title="Id" Width="70px" TextAlign="TextAlign.Center" Frozen="true"/>
-                                <RadzenDataGridColumn TItem="ItemOrder" Property="Product.ProductName" Title="Товар" Width="180px" >
-                                    <Template Context="detail">
-                                        @String.Format("{0}, BC:{1}, Sph:{2}, (Id:{3})", detail?.Product?.Name, @detail?.Product?.BC, @detail?.Product?.Sph, @detail?.ProductId)
-                                    </Template>
-                                </RadzenDataGridColumn>
-                                <RadzenDataGridColumn TItem="ItemOrder" Property="OrderCustomerId" Title="№ зак.пок*" Width="130px" TextAlign="TextAlign.Center"/>
+        <RadzenTabs>
+            <Tabs>
+                <RadzenTabsItem Text="Список товаров">
+                    <RadzenDataGrid @ref="grid" AllowFiltering="true" AllowSorting="true" Data="@(ItemOrderCollection)" TItem="ItemOrder"
+                        AllowPaging="true" PageSize="3" PagerHorizontalAlign="HorizontalAlign.Center" PageSizeOptions="@pageSizeOptions"
+                        AllowColumnResize="true" >
+                        <EmptyTemplate>
+                            <p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">В данном заказе еще нет товаров. Добавьте товары в заказ.</p>
+                        </EmptyTemplate>
+                        <Columns>
+                            <RadzenDataGridColumn TItem="ItemOrder" Property="ItemOrderId" Title="Id" Width="70px" TextAlign="TextAlign.Center" Frozen="true"/>
+                            <RadzenDataGridColumn TItem="ItemOrder" Property="Product.ProductName" Title="Товар" Width="180px" >
+                                <Template Context="detail">
+                                    @String.Format("{0}, BC:{1}, Sph:{2}, (Id:{3})", detail?.Product?.Name, @detail?.Product?.BC, @detail?.Product?.Sph, @detail?.ProductId)
+                                </Template>
+                            </RadzenDataGridColumn>
+                            <RadzenDataGridColumn TItem="ItemOrder" Property="OrderCustomerId" Title="№ зак.пок*" Width="130px" TextAlign="TextAlign.Center"/>
 
-                                <RadzenDataGridColumn TItem="ItemOrder" Property="OrderVendorId" Title="№ зак. пост*" Width="130px" TextAlign="TextAlign.Center">
-                                    <Template Context="detail">
-                                        <RadzenNumeric TValue="int?" Change=@(() => OnChangeItemOrderVendor(detail.ItemOrderId, detail.OrderVendorId)) Class="w-100" @bind-Value=@detail.OrderVendorId/>
-                                    </Template>
-                                </RadzenDataGridColumn>
+                            <RadzenDataGridColumn TItem="ItemOrder" Property="OrderVendorId" Title="№ зак. пост*" Width="130px" TextAlign="TextAlign.Center">
+                                <Template Context="detail">
+                                    <RadzenNumeric TValue="int?" Change=@(() => OnChangeItemOrderVendor(detail.ItemOrderId, detail.OrderVendorId)) Class="w-100" @bind-Value=@detail.OrderVendorId/>
+                                </Template>
+                            </RadzenDataGridColumn>
 
-                                <RadzenDataGridColumn TItem="ItemOrder" Property="Price" Title="Цена" Width="100px" TextAlign="TextAlign.Center">
-                                    <Template Context="detail">
-                                        @String.Format(new System.Globalization.CultureInfo("ru-ru"), "{0:C}", detail.Price)
-                                    </Template>
-                                </RadzenDataGridColumn> 
-                                <RadzenDataGridColumn TItem="ItemOrder" Property="Quantity" Title="Кол-во" Width="100px" TextAlign="TextAlign.Center"/>
-                                <RadzenDataGridColumn TItem="ItemOrder" Property="Summ" Title="Сумма" Width="100px" TextAlign="TextAlign.Center">
-                                    <Template Context="itemOrder">
-                                        @String.Format("{0} руб.", itemOrder.Price * itemOrder.Quantity)
-                                    </Template>
-                                </RadzenDataGridColumn>
-                                <RadzenDataGridColumn TItem="ItemOrder" TextAlign="TextAlign.Center" Width="100px" Filterable="false" Sortable="false">
-                                    <Template Context="detail">
-                                        <RadzenButton Icon="delete_forever" Click="@(() => DeleteItemOrder(detail.ItemOrderId))"
-                                            Class="mb-4" ButtonStyle="ButtonStyle.Light" />  
-                                    </Template>
-                                </RadzenDataGridColumn>
-                            </Columns>
-                        </RadzenDataGrid>
-                        <br/>
-                        
-                        <div class="row" >
-                            <div class="col-md-6">
-                                <RadzenButton Icon="refresh" Text="Обновить Таблицу" Click="@Reset"  
-                                    ButtonStyle="ButtonStyle.Light" Style="margin: 10px;"/>
-                                <RadzenButton Icon="control_point" Text="Добавить любой товар" Click="@(() => AddRandomItemOrder())"
-                                    Class="mb-4" ButtonStyle="ButtonStyle.Light"  Style="margin: 10px;" />  
+                            <RadzenDataGridColumn TItem="ItemOrder" Property="Price" Title="Цена" Width="100px" TextAlign="TextAlign.Center">
+                                <Template Context="detail">
+                                    @String.Format(new System.Globalization.CultureInfo("ru-ru"), "{0:C}", detail.Price)
+                                </Template>
+                            </RadzenDataGridColumn> 
+                            <RadzenDataGridColumn TItem="ItemOrder" Property="Quantity" Title="Кол-во" Width="100px" TextAlign="TextAlign.Center"/>
+                            <RadzenDataGridColumn TItem="ItemOrder" Property="Summ" Title="Сумма" Width="100px" TextAlign="TextAlign.Center">
+                                <Template Context="itemOrder">
+                                    @String.Format("{0} руб.", itemOrder.Price * itemOrder.Quantity)
+                                </Template>
+                            </RadzenDataGridColumn>
+                            <RadzenDataGridColumn TItem="ItemOrder" TextAlign="TextAlign.Center" Width="100px" Filterable="false" Sortable="false">
+                                <Template Context="detail">
+                                    <RadzenButton Icon="delete_forever" Click="@(() => DeleteItemOrder(detail.ItemOrderId))"
+                                        Class="mb-4" ButtonStyle="ButtonStyle.Light" />  
+                                </Template>
+                            </RadzenDataGridColumn>
+                        </Columns>
+                    </RadzenDataGrid>
+                    <br/>
+                    
+                    <div class="row" >
+                        <div class="col-md-6">
+                            <RadzenButton Icon="control_point" Text="Добавить любой товар" Click="@(() => AddRandomItemOrder())"
+                                Class="mb-4" ButtonStyle="ButtonStyle.Light"  Style="margin: 10px;" />  
+                            <RadzenButton Icon="refresh" Text="Обновить Таблицу" Click="@Reset"  
+                                ButtonStyle="ButtonStyle.Light" Style="margin: 10px;"/>
                             </div>
-                            <div class="col-md-6" >
-                                <RadzenButton Text="Export XLS" Icon="grid_on" Click="@(args => Export("excel"))" Class="mb-4 mr-2" ButtonStyle="ButtonStyle.Light"/>
-                                <RadzenButton Text="Export CSV" Icon="wrap_text" Click="@(args => Export("csv"))" Class="mb-4" ButtonStyle="ButtonStyle.Light"/>  
-                            </div>
-                            <div class="col-md-6" >
-                                <p><b>1* (№ зак.пок)</b> - № Заказа от покупателя</p>
-                                <p><b>2* (№ зак.пост)</b> - № Заказа для поставщика</p>
-                            </div>
-                        </div>                        
-                        
-                    </RadzenTabsItem>
-                    <RadzenTabsItem Text="Товары">
-                        <RadzenDataList WrapItems="true" AllowPaging="true" Data="@(ItemOrderCollection)" TItem="ItemOrder" PageSize="10">
-                            <Template Context="detail">
-                                <RadzenCard >
-                                    <b>@detail?.Product?.Name</b>
-                                    @String.Format(" BC:{0}, Sph:{1}, Cell:{2}",  @detail?.Product?.BC, @detail?.Product?.Sph, @detail?.Product?.Cell)
-                                </RadzenCard>
-                            </Template>
-                        </RadzenDataList>
-                    </RadzenTabsItem>
-                </Tabs>
-            </RadzenTabs>
-            }
+                        <div class="col-md-6" >
+                            <p><b>1* (№ зак.пок)</b> - № Заказа от покупателя</p>
+                            <p><b>2* (№ зак.пост)</b> - № Заказа для поставщика</p>
+                        </div>
+                    </div>                        
+                    
+                </RadzenTabsItem>
+                <RadzenTabsItem Text="Товары">
+                    <RadzenDataList WrapItems="true" AllowPaging="true" Data="@(ItemOrderCollection)" TItem="ItemOrder" PageSize="10">
+                        <Template Context="detail">
+                            <RadzenCard >
+                                <b>@detail?.Product?.Name</b>
+                                @String.Format(" BC:{0}, Sph:{1}, Cell:{2}",  @detail?.Product?.BC, @detail?.Product?.Sph, @detail?.Product?.Cell)
+                            </RadzenCard>
+                        </Template>
+                    </RadzenDataList>
+                </RadzenTabsItem>
+            </Tabs>
+        </RadzenTabs>
+    }
+    </ChildContent>
+</RadzenPanel>
 
 @code {
     RadzenDataGrid<ItemOrder>? grid = null;
