--- a/WebOptixSuccess/Shared/NavMenu.razor
+++ b/WebOptixSuccess/Shared/NavMenu.razor
@@ -1,6 +1,10 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">WebOptixSuccess</a>
+        <a class="navbar-brand" href=""> 
+            <RadzenImage Path="https://optix.by/wp-content/uploads/2021/04/cropped-561-5614395_anime-eye-svg-clip-arts-eye-cartoon-png-32x32.png" 
+                Style="width: 32px; margin-right: 10px;" />
+            Optix
+        </a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,64 +18,48 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Главная
             </NavLink>
         </li>
+
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="customers">
-                <RadzenIcon Icon="person_pin"  />
-                <span class="oi oi-plus" aria-hidden="true"></span> Клиенты
+            <NavLink class="nav-link" href="customers" Match="NavLinkMatch.All">
+                <span class="oi oi-people" aria-hidden="true"></span> Клиенты
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="order-customers">
-                <span class="oi oi-plus" aria-hidden="true"></span> Заказы клиентов
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Заказы клиентов
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="item-orders">
-                <span class="oi oi-plus" aria-hidden="true"></span> Товары в заказах
+                <span class="oi oi-list" aria-hidden="true"></span> Товары в заказах
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="order-vendors">
-                <span class="oi oi-plus" aria-hidden="true"></span> Заказы поставщиков
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Заказы поставщиков
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="vendors">
-                <RadzenIcon Icon="account_box"  />Поставщики
+                <span class="oi oi-people" aria-hidden="true"></span> Поставщики
             </NavLink>
+        </li>
+
+        <li>
+            <hr/>
         </li>
         
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Settings">
-                <span class="oi settings" aria-hidden="true"></span> Обслуживание
+                <span class="oi oi-brush" aria-hidden="true"></span> Обслуживание
             </NavLink>
         </li>
     </ul>
-        <RadzenPanelMenu Style="width:250px">
 
-        <RadzenPanelMenuItem Text="File Upload" Icon="file_download">
-           <RadzenPanelMenuItem Text="Upload" Path="upload" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-           <RadzenPanelMenuItem Text="file-upload-1" Path="file-upload-1" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-           <RadzenPanelMenuItem Text="file-upload-2" Path="file-upload-2" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-           <RadzenPanelMenuItem Text="RadzenUpload" Path="RadzenUpload" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-        </RadzenPanelMenuItem>
-
-        <RadzenPanelMenuItem Text="Categories & Products" Icon="reorder">
-           <RadzenPanelMenuItem Text="Categories" Path="categories" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-           <RadzenPanelMenuItem Text="Products" Path="products" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-        </RadzenPanelMenuItem>
-
-        <RadzenPanelMenuItem Text="Counter & Fetch data" Icon="done_all">
-           <RadzenPanelMenuItem Text="Counter" Path="counter" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-           <RadzenPanelMenuItem Text="Fetch data" Path="fetchdata" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-        </RadzenPanelMenuItem>
-
-
-    </RadzenPanelMenu>
 </div>
 
 
