--- a/WebOptixSuccess/Components/ItemOrdersComponent.razor
+++ b/WebOptixSuccess/Components/ItemOrdersComponent.razor
@@ -16,6 +16,11 @@
         <RadzenTabs>
             <Tabs>
                 <RadzenTabsItem Text="Список товаров">
+
+                    <div class="alert @alertClass" role="alert">
+                        @warningMessage1
+                    </div>
+
                     <RadzenDataGrid @ref="grid" AllowFiltering="true" AllowSorting="true" Data="@(ItemOrderCollection)" TItem="ItemOrder"
                         AllowPaging="true" PageSize="3" PagerHorizontalAlign="HorizontalAlign.Center" PageSizeOptions="@pageSizeOptions"
                         AllowColumnResize="true" >
@@ -57,14 +62,16 @@
                         </Columns>
                     </RadzenDataGrid>
                     <br/>
-                    
                     <div class="row" >
                         <div class="col-md-6">
-                            <RadzenButton Icon="control_point" Text="Добавить любой товар" Click="@(() => AddRandomItemOrder())"
-                                Class="mb-4" ButtonStyle="ButtonStyle.Light"  Style="margin: 10px;" />  
-                            <RadzenButton Icon="refresh" Text="Обновить Таблицу" Click="@Reset"  
-                                ButtonStyle="ButtonStyle.Light" Style="margin: 10px;"/>
-                            </div>
+                           @if (SelectedOrder is OrderCustomer)
+                           {
+                               <RadzenButton Icon="control_point" Text="Добавить любой товар" Click="@(() => AddRandomItemOrder())"
+                                    Class="mb-4" ButtonStyle="ButtonStyle.Light"  Style="margin: 10px;" />
+                           }
+                           <RadzenButton Icon="refresh" Text="Обновить Таблицу" Click="@Reset"  
+                           ButtonStyle="ButtonStyle.Light" Style="margin: 10px;"/>
+                        </div>
                         <div class="col-md-6" >
                             <p><b>1* (№ зак.пок)</b> - № Заказа от покупателя</p>
                             <p><b>2* (№ зак.пост)</b> - № Заказа для поставщика</p>
@@ -91,12 +98,16 @@
 @code {
     RadzenDataGrid<ItemOrder>? grid = null;
     IEnumerable<int> pageSizeOptions = new int[] { 10, 20, 30 };
-
     [Parameter]
-    public IList<ItemOrder>? ItemOrderCollection { get; set; }
+    public Order SelectedOrder { get; set; } = new();
+    [Parameter]
+    public IList<ItemOrder> ItemOrderCollection { get; set; } = new List<ItemOrder>();
 
     [Parameter]
     public EventCallback UpdateCallback { get; set; }
+
+    string? warningMessage1 { get; set; }
+    string? alertClass { get; set; }
 
     async Task Reset()
     {
@@ -106,7 +117,7 @@
             await grid.FirstPage(true);
         }
     }
-
+    // Добавить товар в заказ поставщика
     private void OnChangeItemOrderVendor(int ItemOrderId, int? OrderVendorId)
     {
         ItemOrder? itemOrder = dbContext.ItemOrders?.Find(ItemOrderId);
@@ -115,71 +126,115 @@
             if (OrderVendorId == null)
             {
                 itemOrder.OrderVendorId = null;
+                itemOrder.OrderVendor.Edited = DateTime.Now;
                 dbContext.Update(itemOrder);
                 dbContext.SaveChanges();
+                alertClass = "alert-success";
+                warningMessage1 = "Товар успешно удален из заказа";
+                UpdateCallback.InvokeAsync();
             }
             else
             {
                 OrderVendor? orderVendor = dbContext.OrderVendors?.Find(OrderVendorId);
+
                 if (orderVendor != null)
                 {
+                    if (itemOrder.OrderVendor != null)
+                    {
+                        itemOrder.OrderVendor.Edited = DateTime.Now;
+                        dbContext.OrderVendors.Update(itemOrder.OrderVendor);
+                    }
+
                     itemOrder.OrderVendorId = OrderVendorId;
+                    dbContext.OrderVendors.Update(orderVendor);
+
+                    orderVendor.Edited = DateTime.Now;
                     dbContext.Update(itemOrder);
+
                     dbContext.SaveChanges();
+
+                    alertClass = "alert-success";
+                    warningMessage1 = $"Товар (id:{itemOrder.ItemOrderId}) успешно добавлен в заказ (id:{OrderVendorId}) для поставщика ";
                     //console.Log($"{name} value changed to {value}");
+                    UpdateCallback.InvokeAsync();
                 }
                 else
                 {
-                    itemOrder.OrderVendorId = null;
-                    dbContext.Update(itemOrder);
-                    dbContext.SaveChanges();
+                    //itemOrder.OrderVendorId = null;
+                    //itemOrder.OrderVendor.Edited = DateTime.Now;
+                    //dbContext.Update(itemOrder);
+                    //dbContext.SaveChanges();
+                    alertClass = "alert-danger";
+                    warningMessage1 = $"Заказ для поставщика Id:{OrderVendorId ?? 0} не найден";
                 }
             }
         } else {
-            throw new Exception("ItemOrderId not found. Обратитесь к администратору.");
+            //throw new Exception("");
+            alertClass = "alert-danger";
+            warningMessage1 = $"ItemOrderId not found. Обратитесь к администратору.";
         }
-    }
 
+    }
+    // Удалить товар из заказа покупателя
     protected void DeleteItemOrder(int ItemOrderId)
     {
         ItemOrder? itemOrder = dbContext.ItemOrders.Find(ItemOrderId);
         if(itemOrder != null)
         {
+            itemOrder.OrderCustomer.Edited = DateTime.Now;
             dbContext.ItemOrders.Remove(itemOrder);
             dbContext.SaveChanges();
             // UpdateCallback.InvokeAsync();
             //ItemOrderCollection.Remove(itemOrder);
             Task delayTask = Reset(); // https://docs.microsoft.com/ru-ru/dotnet/csharp/language-reference/compiler-messages/cs4014
         }
+        UpdateCallback.InvokeAsync();
     }
-
+    // Добавить рандомный товар в выбранный заказ
     protected void AddRandomItemOrder()
     {
         var random = new Random();
         ItemOrder itemOrder = new ItemOrder();
-        int? tempOrderCustomerId;
-        if(ItemOrderCollection?.Count == 0)
-        {
-            tempOrderCustomerId =dbContext.OrderCustomers.FirstOrDefault()?.OrderCustomerId;
-        }else
-        {
-            tempOrderCustomerId = (ItemOrderCollection?.First()?.OrderCustomerId) ?? (dbContext.OrderCustomers.FirstOrDefault()?.OrderCustomerId);
-        }
+        //int? tempOrderCustomerId;
+        //if(ItemOrderCollection?.Count == 0)
+        //{
+        //    tempOrderCustomerId =dbContext.OrderCustomers.FirstOrDefault()?.OrderCustomerId;
+        //}else
+        //{
+        //    tempOrderCustomerId = (ItemOrderCollection?.First()?.OrderCustomerId) ?? (dbContext.OrderCustomers.FirstOrDefault()?.OrderCustomerId);
+        //}
 
-        if ( tempOrderCustomerId != null )
+        //if ( tempOrderCustomerId != null )
+        if ( SelectedOrder != null )
         {
-            itemOrder.OrderCustomerId = tempOrderCustomerId ?? default(int);
-            itemOrder.ProductId = random.Next(1, 500);
+            itemOrder.OrderCustomerId = ((OrderCustomer)SelectedOrder).OrderCustomerId;
+            itemOrder.ProductId = random.Next(1, 10);
             itemOrder.Quantity = random.Next(1, 1000);
+            
+            var updateOrderCustomer = dbContext.OrderCustomers.Find(itemOrder.OrderCustomerId);
+            if (updateOrderCustomer != null)
+            {
+                #pragma warning disable 8600, 8602
+                updateOrderCustomer.Edited = DateTime.Now;
+                dbContext.OrderCustomers.Update(updateOrderCustomer);
+                #pragma warning restore 8600, 8602
+            }
 
             dbContext.ItemOrders.Add(itemOrder);
-            dbContext.SaveChangesAsync();
-            // UpdateCallback.InvokeAsync();
+            //dbContext.SaveChangesAsync();
+            dbContext.SaveChanges();
             //ItemOrderCollection.Add(itemOrder);
+            
+            //ItemOrderCollection.Add(itemOrder);
+
+            //ItemOrderCollection = dbContext.ItemOrders.Where(x => x.OrderCustomerId == ((OrderCustomer)SelectedOrder).OrderCustomerId).ToList();
+
             #pragma warning disable 4014
             Reset();  //https://docs.microsoft.com/ru-ru/dotnet/csharp/language-reference/compiler-messages/cs4014
                       // https://www.stackfinder.ru/questions/22629951/suppressing-warning-cs4014-because-this-call-is-not-awaited-execution-of-the
-            #pragma warning restore 4014            
+            #pragma warning restore 4014 
+            
+            UpdateCallback.InvokeAsync();
         }
     }
 
