--- a/WebOptixSuccess/Pages/Customers/Customers.razor
+++ b/WebOptixSuccess/Pages/Customers/Customers.razor
@@ -1,6 +1,7 @@
 ﻿@page "/customers"
 
 
+
 @using Microsoft.EntityFrameworkCore
 
 
@@ -10,6 +11,7 @@
 <h3>Покупатели</h3>
 
 <RadzenButton Text="Обновить" Click="@Reset" Style="margin-bottom: 20px;" />
+<RadzenButton Text="Добавить" Click="@OnClickAdd" Style="margin-bottom: 20px;" />
 
     <RadzenDataGrid @ref="gridRef" IsLoading=@isLoading Count="@count" Data="@customers" LoadData="@LoadData" TItem="Customer"
         AllowSorting="true" AllowFiltering="true" 
@@ -36,6 +38,9 @@
             <RadzenDataGridColumn TItem="Customer" Property="Description" Title="Description" Width="100px" />
              <RadzenDataGridColumn TItem="Customer" >
                  <Template Context="customer">
+                     <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light"
+                            Click="@(() => OnClickEdit(customer))">
+                     </RadzenButton>
                      <RadzenButton Icon="delete_forever" ButtonStyle="ButtonStyle.Light"
                             Click="@(() => OnClickDelete(customer.CustomerId))">
                      </RadzenButton>
@@ -55,11 +60,15 @@
 
     async Task Reset()
     {
-        if (gridRef != null)
-        {
-            gridRef.Reset(true);
+        customers = dbContext.Customers.ToArray();
+        //if (gridRef != null)
+        //{
+        //    gridRef.Reset(true);
             await gridRef.FirstPage(true);
-        }
+        //}
+
+        customers = dbContext.Customers.ToArray();
+        gridRef.FirstPage(true);
     }
 
     async Task LoadData(LoadDataArgs args)
@@ -101,8 +110,13 @@
         {
             dbContext.Customers.Remove(customer);
             dbContext.SaveChangesAsync();
+            NavigationManager.NavigateTo("/customers", true);
+
             //Task task = Reset();
-            Task.Run(Reset);
+            //Task.Run(Reset);
+            
+            //customers = dbContext.Customers.ToList();
+            //gridRef.FirstPage(true);
         }
     }
 }
