--- a/WebOptixSuccessAuth/Shared/LoginDisplay.razor
+++ b/WebOptixSuccessAuth/Shared/LoginDisplay.razor
@@ -1,12 +1,14 @@
 ﻿<AuthorizeView>
     <Authorized>
-        <a href="Identity/Account/Manage">Hello, @context.User.Identity?.Name!</a>
-        <form method="post" action="Identity/Account/LogOut">
-            <button type="submit" class="nav-link btn btn-link">Log out</button>
-        </form>
+        <div class="row">
+@*            <div class="col col-6">
+                <a href="Identity/Account/Manage">Hello, @context.User.Identity?.Name!</a>
+            </div>*@
+            <div class="col col-6">
+                @*<form method="post" action="Identity/Account/LogOut">
+                    <button type="submit" class="nav-link btn btn-link">Выход</button>
+                </form>*@
+            </div>
+        </div>
     </Authorized>
-    <NotAuthorized>
-        <a href="Identity/Account/Register">Register</a>
-        <a href="Identity/Account/Login">Log in</a>
-    </NotAuthorized>
 </AuthorizeView>
