--- a/WebOptixSuccessAuth/Pages/_Host.cshtml
+++ b/WebOptixSuccessAuth/Pages/_Host.cshtml
@@ -6,3 +6,14 @@
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered" />
+
+<link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+<script src="~/js/SaveAsFile.js"></script>
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500&display=swap" rel="stylesheet">
