--- a/WebOptixSuccessAuth/Shared/MainLayout.razor
+++ b/WebOptixSuccessAuth/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>WebOptixSuccessAuth</PageTitle>
+<PageTitle>WebOptixSuccess</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -8,9 +8,15 @@
     </div>
 
     <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <div class="top-row px-4">
+            <div class="row" style="width:100%;">
+                <div class="col col-6">
+                    <b>Optix Management System @*(@startDate)*@</b>
+                </div>
+                <div class="col col-6">
+                    <LoginDisplay />
+                </div> 
+            </div>
         </div>
 
         <article class="content px-4">
