--- a/WebOptixSuccessAuth/Shared/NavMenu.razor
+++ b/WebOptixSuccessAuth/Shared/NavMenu.razor
@@ -1,6 +1,13 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿
+
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">WebOptixSuccessAuth</a>
+        <a class="navbar-brand" href=""> 
+            <RadzenImage Path="https://optix.by/wp-content/uploads/2021/04/cropped-561-5614395_anime-eye-svg-clip-arts-eye-cartoon-png-32x32.png" 
+                Style="width: 32px; margin-right: 10px;" />
+            Optix
+        </a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -8,24 +15,87 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
+    <ul class="nav flex-column">
+
+         <AuthorizeView>
+            <NotAuthorized>
+               <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="Identity/Account/Login" Match="NavLinkMatch.All">
+                        <span class="oi oi-account-login"></span> Вход
+                    </NavLink>
+                </li>
+            </NotAuthorized>
+            <Authorized>
+ 
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Главная
+                    </NavLink>
+                </li>
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="customers" Match="NavLinkMatch.All">
+                        <span class="oi oi-people" aria-hidden="true"></span> Клиенты
+                    </NavLink>
+                </li>
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="order-customers">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Заказы клиентов
+                    </NavLink>
+                </li>
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="item-orders">
+                        <span class="oi oi-list" aria-hidden="true"></span> Товары в заказах
+                    </NavLink>
+                </li>
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="order-vendors">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Заказы поставщиков
+                    </NavLink>
+                </li>
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="vendors">
+                        <span class="oi oi-people" aria-hidden="true"></span> Поставщики
+                    </NavLink>
+                </li>
+
+                <li>
+                    <hr/>
+                </li>
+        
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="Settings">
+                        <span class="oi oi-brush" aria-hidden="true"></span> Обслуживание
+                    </NavLink>
+                </li>        
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="Identity/Account/Register">
+                        <span class="oi oi-person"></span> Регистрация 
+                    </NavLink>
+                </li>
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" >
+                        <span class="oi oi-account-logout"></span>
+                        <form method="post" action="Identity/Account/LogOut">
+                            <button type="submit" class="nav-link btn btn-link" style="color:white;">Выход</button>
+                        </form>
+                    </NavLink>
+                </li>
+
+            </Authorized>
+        </AuthorizeView>
+
+    </ul>
 </div>
+
+
+
 
 @code {
     private bool collapseNavMenu = true;
