--- a/WebOptixSuccessAuth/_Imports.razor
+++ b/WebOptixSuccessAuth/_Imports.razor
@@ -6,5 +6,12 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
 @using WebOptixSuccessAuth
 @using WebOptixSuccessAuth.Shared
+
+@using Radzen
+@using Radzen.Blazor
+
+@using CoreBusiness.Models
+@using Plugins.DataStore.SQL
